clusters/homelab/apps/mediacenter/sabnzbd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  namespace: mediacenter
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/auth-url: http://authelia.authelia.svc.cluster.local/api/verify
    nginx.ingress.kubernetes.io/auth-signin: https://auth.tkuipers.ca/?rd=https://$host$escaped_request_uri
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - sabnzbd.tkuipers.ca
    secretName: sabnzbd-tkuipers-ca-tls
  rules:
  - host: sabnzbd.tkuipers.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sabnzbd
            port:
              number: 8080
